# apantli

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  ERROR_HANDLING_IMPROVEMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  config.backup.20260111_171312.yaml  config.backup.20260111_171320.yaml  config.backup.20260111_171329.yaml  config.yaml  dev.sh  main.py  proxy.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_unit_tests.py  test_error_handling.py  view-logs.sh
.github/workflows/: release.yml
apantli/: __init__.py  __main__.py  __version__.py  config.py  database.py  errors.py  llm.py  server.py  utils.py
apantli/static/: site.webmanifest
apantli/static/css/: compare.css  dashboard.css
apantli/static/js/: compare.js  dashboard.js
apantli/static/js/modules/: calendar.js  core.js  models.js  requests.js  state.js  stats.js  tables.js
docs/: APANTLI_REVIEW_AND_OPPORTUNITIES.md  API.md  ARCHITECTURE.md  CALENDAR_UPDATE.md  CHRONICLE.md  CHRONICLES.md  CODE_REVIEW.md  CONFIGURATION.md  CONTEXT.md  DASHBOARD.md  DASHBOARD_IMPROVEMENT_PLAN.md  DATABASE.md  DECISIONS.md  DOCUMENTATION_AUDIT_2025-10-07.md  DOC_UPDATE.md  ENHANCEMENT_SUMMARY.md  ERROR_HANDLING.md  ERROR_HANDLING_PLAN.md  FRONT_END.md  IMPLEMENTATION.md  INTERNET_EXPOSURE_DETECTION.md  LLM_CLI_INTEGRATION.md  MODEL_NAMING.md  OPERATIONS.md  PLAYGROUND.md  PROJECT_BASED_USAGE_TRACKING.md  README.md  REARCHITECTURE.md  RECOMMENDATIONS.md  TESTING.md  TROUBLESHOOTING.md
docs/archive/: CHATBOX_PLAN.md  CODE_REVIEW.md  DASHBOARD_IMPROVEMENT_PLAN.md  README.md  REARCHITECTURE.md  development-session-2025-10-04.md
docs/chronicles/: lore.md  phase-0-foundation.md  phase-1-dashboard-evolution.md  phase-2-advanced-features.md  phase-3-documentation-polish.md  phase-4-token-efficient-documentation.md  phase-5-qol-improvements.md  phase-qol-model-management.md
docs/lore/: ARCHAEOLOGICAL_LEARNINGS.md  REFACTORING_SUMMARY.md  THE_STORY_OF_APANTLI.md  WHAT_I_THINK_YOU_WANT.md  archaeology.md
docs/workshop/: APANTLI_REVIEW_AND_OPPORTUNITIES.md  ENHANCEMENT_SUMMARY.md  INTERNET_EXPOSURE_DETECTION.md  PROJECT_BASED_USAGE_TRACKING.md
launchd/: NAMING.md  README.md  apantli.plist.template  install.sh  tailscale.plist.template
templates/: compare.html  dashboard.html
tests/: README.md  __init__.py  conftest.py  test_config.py  test_database.py  test_errors.py  test_llm.py  test_utils.py
tests/integration/: __init__.py  test_error_handling.py  test_proxy.py
utils/: README.md  generate_llm_config.py  recalculate_costs.py  redact_api_keys.py
