[project]
name = "apantli"
version = "0.1.0"
description = "Lightweight LLM proxy with SQLite cost tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Philip Borenstein", email = "pborenstein@gmail.com"}
]
requires-python = ">=3.13"
keywords = ["llm", "proxy", "litellm", "openai", "anthropic", "cost-tracking", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "pyyaml",
    "python-dotenv",
    "netifaces",
    "tenacity",
    "aiosqlite",
]

[project.urls]
Homepage = "https://github.com/pborenstein/apantli"
Repository = "https://github.com/pborenstein/apantli"
Issues = "https://github.com/pborenstein/apantli/issues"

[project.scripts]
apantli = "apantli.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
