[project]
name = "apantli"
version = "0.1.0"
description = "Lightweight LLM proxy with SQLite cost tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Philip Borenstein", email = "pborenstein@gmail.com"}
]
requires-python = ">=3.13"
keywords = ["llm", "proxy", "litellm", "openai", "anthropic", "cost-tracking", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Proxy Servers",
]
dependencies = [
    "fastapi",
    "uvicorn",
    "litellm",
    "pyyaml",
    "python-dotenv",
    "netifaces",
    "tenacity",
    "aiosqlite",
]

[project.urls]
Homepage = "https://github.com/pborenstein/apantli"
Repository = "https://github.com/pborenstein/apantli"
Issues = "https://github.com/pborenstein/apantli/issues"

[project.scripts]
apantli = "apantli.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.mypy]
python_version = "3.13"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

# Start strict, relax as needed
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false
